# utag

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
.ipynb_checkpoints/: README-checkpoint.md
documentation/: CyCIF Lung Cancer.ipynb  IMC Bladder Cancer.ipynb  IMC Breast Cancer.ipynb  IMC Lung Infection.ipynb  Running in R.Rmd  UTAG Tutorial.ipynb  Untitled.Rmd  testing_memory.ipynb
utag/: __init__.py  load_metabric.py  segmentation.py  types.py  utils.py  visualize.py  vizualize.py
utag/tests/: utag_test.py
