# PIP, using PEP621
[project]
name = "utag"
authors = [
    {name = "Junbum Kim", email = "juk4007@med.cornell.edu"},
    {name = "Andre Rendeiro", email = "afrendeiro@gmail.com"},
]
description = "Unsupervised discovery of tissue architechture with graphs (UTAG)"
readme = "README.md"
keywords = [
    "computational biology",
    "bioinformatics",
    "imaging",
    "multiplexed imaging",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# licence = "gpt3"
requires-python = ">=3.8"
# not yet supported by pip!
dependencies = [
    "numpy>=1.19",
    "pandas>=1.0.1",
    "anndata",
    "scanpy",
    "parc",
    "squidpy",
    "scipy>=1.6",
    "matplotlib>=3.4",
    "tqdm",
    "networkx>=2.4",
    "parmap",
    "scikit-learn"
]
dynamic = ['version']

[project.optional-dependencies]
# not yet supported by pip!
dev = [
    "ipython",
    "black[d]",
    "mypy",  # pin to version supporting pyproject.toml
    "pylint",
    "git-lint",
    "pytest",
    "rich",
    # data-science-types
    "PyQt5",
]
test = [
    "pytest>=6",
    "pytest-cov",
]
doc = [
    "Sphinx",
    "sphinx-issues",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]

[project.urls]
homepage = "https://github.com/ElementoLab/utag"
documentation = "https://github.com/ElementoLab/utag/blob/main/README.md"
repository = "https://github.com/ElementoLab/utag"

[build-system]
# requires = ["poetry>=0.12", "setuptools>=45", "wheel", "poetry-dynamic-versioning"]
# build-backend = "poetry.masonry.api"
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "utag/_version.py"
write_to_template = 'version = __version__ = "{version}"'

# Poetry
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "utag"
version = "0.0.0"  # waiting on next release of poetry to use dynamic-versioning extension
description = "Unsupervised discovery of tissue architechture with graphs (UTAG)"
authors = ["Junbum Kim <juk4007@med.cornell.edu>", "Andre Rendeiro <afrendeiro@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
pandas = "^1.0.1"
scipy = "^1.6"
scikit-image = "^1.18"
matplotlib = "^3.4"
networkx = "^2.4"
tensorflow-gpu = "^2.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
pylint = "^2.5.3"
git-lint = "^0.1.2"
black = {extras = ["d"], version = "^19.10b0"}
mypy = "^0.782"
pytest = "^5.4.3"
Sphinx = "^3.1.1"
sphinx-issues = "^1.2.0"
sphinx-rtd-theme = "^0.5.0"
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.extras]


[tool.black]
line-length = 90
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = '3.8'
warn_return_any = true
warn_unused_configs = true

# Packages without type annotations in shed yet
[[tool.mypy.overrides]]
module = [
    'numpy.*',
    'pandas.*',
    'scipy.*',
    'skimage.*',
    'matplotlib.*',
    'networkx.*',
    #
    'utag.*'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "integration",
]
markers = [
    'slow', # 'marks tests as slow (deselect with "-m 'not slow'")',
    'serial'
]
