# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = gatdu
version = 0.0.0

[options]
install_requires =
    numpy
    pandas
    anndata
    scanpy
    squidpy
    scipy
    tifffile
    scikit-image
    tensorflow==2.5.0
    matplotlib
    tqdm
    networkx
    pygraphviz
    
packages = find:

; [options.extras_require]


[options.entry_points]
console_scripts =
    gatdu = gatdu.cli:cli
