# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = utag
version = 0.0.0

[options]
install_requires =
    numpy
    pandas
    anndata
    scanpy
    parc
    squidpy
    scipy
    matplotlib
    tqdm
    networkx

packages = find:

; [options.extras_require]


[options.entry_points]
console_scripts =
    utag = utag.cli:cli
