# Remove once PIP supports reading project metadata from pyproject.toml
[metadata]
name = utag
description = Unsupervised discovery of tissue architechture with graphs.
version = attr: utag.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = science, bioinformatics, bioimage analysis, multiplexed imaging
url = https://github.com/ElementoLab/utag
project_urls =
    Bug Tracker = https://github.com/ElementoLab/utag/issues
    Documentation = https://github.com/ElementoLab/utag/blob/main/README.md
    Source Code = https://github.com/ElementoLab/utag

author = Junbum Kim, Andre Rendeiro
author_email = juk4007@med.cornell.edu, afrendeiro@gmail.com
license = GPL3

[options]
install_requires =
    numpy>=1.19
    pandas>=1.0.1
    anndata
    scanpy
    parc
    squidpy
    scipy>=1.6
    matplotlib>=3.4
    tqdm
    networkx>=2.4
    parmap
    scikit-learn

packages = find:
